<resources>
    <string name="app_name">Cardiopapers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Cadastrado</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Acessar o conteúdo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha inválida</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Permissão de contatos para autocompletar campo de email."
    </string>
    <string name="login_welcome">Faça já o seu login</string>
    <string name="no_have_account">Ainda não possui cadastro?</string>
    <string name="create_account">Cadastre-se clicando aqui</string>
    <string name="site">www.cardiopapers.com.br</string>

    <string name="txtcomentar">Comentar</string>
    <string name="txtemail">*E-mail</string>
    <string name="txtnome">*Nome</string>
    <string name="txtcomment">*Escreva seu comentário</string>
    <string name="txtwebsite">Website</string>
    <string name="txtLogin">Login</string>
    <string name="txtSenha">Senha</string>
    <string name="last_updates">Útilmas atualizações</string>
    <string name="search_posts">Procurar artigos</string>
    <string name="search">Buscar</string>
</resources>
