<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPostsBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.trmasolucoes.cardiopapers.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/login_welcome" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/vector_drawable_icon_avatar"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/vector_drawable_icon_avatar"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/vector_drawable_icon_padlock"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/vector_drawable_icon_padlock"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_shape"
                android:clickable="true"
                android:elevation="4dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/action_sign_in"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_toRightOf="@+id/textView"
                    android:src="@drawable/vector_drawable_btn_arrow" />
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/no_have_account" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/site" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
