<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetalheActivity"
    android:orientation="vertical">

    <ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:nestedScrollingEnabled="true">
        <RelativeLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_post_detalhe"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/logo_3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:transitionName="post_img" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_post_detalhe"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textAlignment="center"
                android:textColor="@color/colorDark"
                android:textSize="14sp"
                android:transitionName="post_title" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textAlignment="center"
                android:textColor="@color/colorDark"
                android:textSize="14sp"
                android:transitionName="post_date" />

            <WebView
                android:id="@+id/webviewcontent"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_date"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <ListView
                android:id="@+id/list_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/webviewcontent"
                android:visibility="visible"
                android:divider="@null"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:dividerHeight="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/list_comments"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorLabel">

                    <EditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtcomment"
                        android:inputType="textMultiLine"
                        style="@style/inputTextColor"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorLabel">

                    <EditText
                        android:id="@+id/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtnome"
                        style="@style/inputTextColor"
                        android:inputType="none" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorLabel">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtemail"
                        style="@style/inputTextColor"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorLabel">

                    <EditText
                        android:id="@+id/website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtwebsite"
                        style="@style/inputTextColor"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/btnComentar"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_shape"
                    android:clickable="true"
                    android:elevation="4dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="@string/txtcomentar"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_toEndOf="@+id/textView"
                        android:layout_toRightOf="@+id/textView"
                        android:src="@drawable/vector_drawable_btn_arrow" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>

